--- a/src/ZectranetBundle/Resources/views/projectAddTaskToSprint.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectAddTaskToSprint.html.twig
@@ -1,10 +1,10 @@
 <!-- BEGIN OF ADD TASK TO SPRINT MODAL -->
-<div class="modal fade" id="add_task_to_sprint" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="add_task_to_sprint" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header label-primary">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel" style="color: #f5f5f5;">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title" style="color: #f5f5f5;">
                     Add Task To Sprint
                 </h4>
             </div>
@@ -15,12 +15,10 @@
                             <div class="form-group">
                                 <label for="sprint_to_add_task" class="form-control-static">Choose Sprint:</label>
                                 <select id="sprint_to_add_task" class="form-control" ng-model="sprint_id">
-                                    {% for office in project.offices if office in app.user.ownedOffices or office in app.user.assignedOffices %}
-                                        {% for i, sprint in office.sprints if sprint.status.label == 'Open' %}
-                                            <option value="{{ sprint.id }}" {% if i == 0 %}selected="selected"{% endif %}>
-                                                {{ sprint.name }}
-                                            </option>
-                                        {% endfor %}
+                                    {% for i, sprint in office.sprints if sprint.status.label == 'Open' %}
+                                        <option value="{{ sprint.id }}" {% if i == 0 %}selected="selected"{% endif %}>
+                                            {{ sprint.name }}
+                                        </option>
                                     {% endfor %}
                                 </select>
                             </div>
