--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -102,9 +102,16 @@
 
                                 <div class="form-group">
                                     <label class="control-label">
+                                        Thread keywords:
+                                    </label>
+                                    <input type="text" class="form-control" name="keywords">
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="control-label">
                                         Message:
                                     </label>
-                                    <textarea name="message" class="form-control" rows="10" required></textarea>
+                                    <textarea name="message" class="form-control" rows="12" required></textarea>
                                 </div>
                             </div>
                         </div>
