--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -55,41 +55,7 @@
                 </li>
             </ul>
         </div>
-
-        <div class="col-md-4">
-            <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki;">
-                <li class="list-group-item active" style="background:#ddedf4; color:#606060;">
-                    <b>Create Office</b>
-                </li>
-                <li class="list-group-item">
-                    <form action="#" method="post">
-                        <p>
-                            <label style="width: 100%;">
-                                Office name:
-                                <input class="form-control" name="name" type="text"/>
-                            </label>
-                        </p>
-                        <p>
-                            <label style="width: 100%;">
-                                Office template:
-                                <select class="form-control" name="type">
-                                    <option value="1" selected>Trading forum</option>
-                                    <option value="2">Development forum</option>
-                                    <option value="3">Trading office</option>
-                                    <option value="4">Development</option>
-                                </select>
-                            </label>
-                        </p>
-                        <hr/>
-                        <p align="right">
-                            <button class="btn btn-default">Create</button>
-                        </p>
-                    </form>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-md-4">
+        <div class="col-md-4 col-md-offset-4">
             <ul class="list-group"  style="box-shadow: 2px 3px 6px 0 darkkhaki;">
                 <li class="list-group-item active" style="background:#ddedf4; color:#606060;">
                     <b>Market Place</b>
