--- a/src/ZectranetBundle/Resources/views/userProfile.html.twig
+++ b/src/ZectranetBundle/Resources/views/userProfile.html.twig
@@ -26,12 +26,54 @@
                                     Edit profile
                                 </a>
                             {% else %}
-                                <a class="btn btn-default btn-success">
+                                <a class="btn btn-default btn-success" data-toggle="modal" data-target="#add_to_contact_list">
                                     Add to contact list
                                 </a>
                             {% endif %}
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="add_to_contact_list" tabindex="-1" ng-controller="UserController">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header " style="background-color: #e7e7e7 !important;">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title" style="color: #000000;" align="center">
+                                Add To Contact List
+                            </h4>
+                        </div>
+
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-xs-offset-1 col-xs-10">
+                                    <div class="form-group">
+                                        <label>
+                                            <b>Request Message</b>
+                                        </label>
+                                        <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="atclRequest.message"></textarea>
+                                        <br/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal-footer">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success btn-default" ng-click="SendRequest();" >Send Request</button>
+                                <button type="button" class="btn  btn-default" data-dismiss="modal" >  Cancel </button>
+                            </div>
+                        </div>
+
+                        <div class="row" ng-if="response_by_send_request.visible">
+                            <div class="col-xs-12 fade in" style="margin-top: 10px;">
+                                <div class="alert" ng-class="response_by_send_request.type" >
+                                    <p>[[ response_by_send_request.body ]]</p><br/>
+                                    <button type="button" class="btn btn-default" data-dismiss="modal" >Close</button>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
 
@@ -168,4 +210,9 @@
 
 {% block javascripts %}
     {{ parent() }}
+        <script>
+            var USER_ID = {{ user.id }};
+            var APP_USER_ID = {{ app.user.id }};
+        </script>
+        <script src="{{ asset('bundles/zectranet/js/custom/userController.js') }}" type="text/javascript"></script>
 {% endblock %}
