--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -40,7 +40,7 @@
                             <label style="width: 100%;">
                                 Project template:
                                 <select class="form-control" name="type">
-                                    <option value="1" selected>QnA Forum(not working yet)</option>
+                                    <option value="1" selected>QnA Forum</option>
                                     <option value="2">Header forum</option>
                                     <option value="3">Trading office(not working yet)</option>
                                     <option value="4">Development(not working yet)</option>
