Fix hidden projects

--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -40,9 +40,12 @@
 					</li>
 
 					<li>
+                        {% set homeOffice = app.user.homeOffice %}
+                        {% set HOProjectsCount = homeOffice.projects | length + homeOffice.headerForums | length
+                                + homeOffice.QnAForums | length %}
 						<a href="{{ path('zectranet_show_office', {'office_id': app.user.homeOffice.id }) }}"
                            class="
-                                {% if app.user.homeOffice.projects | length > 0 %}
+                                {% if HOProjectsCount > 0 %}
                                     {{ 'non-collapsible-href' }}
                                 {% else %}
                                     {{ 'non-collapsible-href-full' }}
@@ -50,8 +53,6 @@
 							<i class='fa fa-home'></i>
 							<span>Home Office</span>
 						</a>
-                        {% set homeOffice = app.user.homeOffice %}
-                        {% set HOProjectsCount = homeOffice.projects | length + homeOffice.headerForums | length %}
                         {% if HOProjectsCount | length > 0 %}
                             <a href="{{ path('zectranet_show_office', {'office_id': homeOffice.id }) }}" class="collapsible-href">
                                 <i class="fa fa-arrow-left fa-fw"></i>
@@ -77,6 +78,15 @@
                                 </li>
                             {% endfor %}
 
+                            {% for project in homeOffice.QnAForums if project.users | length == 1 %}
+                                <li>
+                                    <a href="{{ path('zectranet_show_header_forum', {'project_id': project.id }) }}">
+                                        <i class="fa fa-briefcase fa-fw"></i>
+                                        {{ project.name }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+
                             <li>
                                 <a href="#">
                                     <i class='fa fa-briefcase'></i>
@@ -94,6 +104,14 @@
                                     {% for project in homeOffice.headerForums if project.users | length > 1 %}
                                         <li>
                                             <a href="{{ path('zectranet_show_project', {'project_id': project.id }) }}">
+                                                <i class="fa fa-briefcase fa-fw"></i>
+                                                {{ project.name }}
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                    {% for project in homeOffice.QnAForums if project.users | length > 1 %}
+                                        <li>
+                                            <a href="{{ path('zectranet_show_header_forum', {'project_id': project.id }) }}">
                                                 <i class="fa fa-briefcase fa-fw"></i>
                                                 {{ project.name }}
                                             </a>
