--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -210,7 +210,7 @@
 		// Variable for AngularJS
 		TEMPPARAMS.USER_ID = {{ app.user.id }};
 		JSON_URLS.deleteScrenshots  = "{{ path('zectranet_document_delete', { fileid : 0 }) }}";
-		JSON_URLS.urlSendRequest  = "{{ path('zectranet_send_request'}}";
+		JSON_URLS.urlSendRequest  = "{{ path('zectranet_send_request')}}";
 	</script>
 {% endblock %}
 
